Changed connection string.

--- a/MyFitnessJourney/MyFitnessJourney.Web/appsettings.json
+++ b/MyFitnessJourney/MyFitnessJourney.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MyFitnessJourney.Web-22027142-d3cd-4f46-99e9-74048ee41d67;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=VLADIMIR\\SQLEXPRESS;Database=MyFitnessJourney;Trusted_Connection=True;TrustServerCertificate=true;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
