--- a/MyFitnessJourney/MyFitnessJourney.Service.Mapping/MyFitnessJourney.Service.Mapping.csproj
+++ b/MyFitnessJourney/MyFitnessJourney.Service.Mapping/MyFitnessJourney.Service.Mapping.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.13" />
+    <ProjectReference Include="..\MyFitnessJourney.Data.Models\MyFitnessJourney.Data.Models.csproj" />
+    <ProjectReference Include="..\MyFitnessJourney.Service.Models\MyFitnessJourney.Service.Models.csproj" />
   </ItemGroup>
 
 </Project>
