--- a/MyFitnessJourney/MyFitnessJourney.Service.Models/MyFitnessJourney.Service.Models.csproj
+++ b/MyFitnessJourney/MyFitnessJourney.Service.Models/MyFitnessJourney.Service.Models.csproj
@@ -10,4 +10,8 @@
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.13" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\MyFitnessJourney.Service.Utils\MyFitnessJourney.Service.Utils.csproj" />
+	</ItemGroup>
+
 </Project>
